--- a/Copy_of_Telecom_Churn_Analysis_Capstone_Project.ipynb
+++ b/Copy_of_Telecom_Churn_Analysis_Capstone_Project.ipynb
@@ -62,7 +62,7 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
         "id": "qsAFBXq7vz23",
         "outputId": "2e9f5aa4-bcf5-41db-af80-d0e4cefd9a54"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "g7bE84oCvzz4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -126,7 +126,7 @@
         "id": "aAco6D9TvzvV",
         "outputId": "688c3b65-ee55-4d37-fb6c-6a2d21027032"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +400,7 @@
         "id": "pOBKHMSkM8mR",
         "outputId": "b347247a-edeb-4d3b-96ed-c7a05b60a65f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -673,7 +673,7 @@
         "id": "_itofzm1vzj4",
         "outputId": "8120d2c4-4c92-4f6c-c9f2-0de7d5270282"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,7 +699,7 @@
         "id": "5qMFiD9CyaWB",
         "outputId": "95f30814-3f43-4bbb-c9ce-9c5384ea3bfd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +749,7 @@
         "id": "6jI9rhKcyaTG",
         "outputId": "9c485f15-f21f-473f-d577-cc1b11ced46d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1062,7 +1062,7 @@
         "id": "qPGRG1F252iD",
         "outputId": "be05aac1-53af-4e0f-9938-ff59ece3dd76"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1095,7 +1095,7 @@
         "id": "Vb0dduYU9LI5",
         "outputId": "583320a2-d5d5-4da9-9629-06ea107752dc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1145,7 @@
         "id": "hj0rnDvU9RDB",
         "outputId": "5c39c6e9-bee5-4062-9526-057cd7a6e51a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1358,7 +1358,7 @@
       "metadata": {
         "id": "iZmWvxoHBhQx"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1379,7 +1379,7 @@
         "id": "xLTPO55yWwoL",
         "outputId": "ce6588f3-32e6-49f8-ae0b-c7823657e7bd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1417,7 +1417,7 @@
         "id": "yzjkFrHcP-qO",
         "outputId": "b05db18e-7e2d-4940-9d10-499324ff2584"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1927,7 +1927,7 @@
         "id": "JjoZq3DoPjx3",
         "outputId": "c20e11fc-fef7-4904-9209-76161d7cf7ad"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1972,7 +1972,7 @@
         "id": "fodMBDUCPju8",
         "outputId": "9a484a33-af1a-4977-e2f7-bf52bdac8467"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2022,7 +2022,7 @@
         "id": "r9DEfpaepKQf",
         "outputId": "ff84857b-fe56-4b39-b9a1-88f217769191"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2061,7 +2061,7 @@
         "id": "B8WMSNXfrBQt",
         "outputId": "a3e21eb7-7c7c-4593-fd41-61f14b4a9b27"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2099,7 +2099,7 @@
         "id": "ntpIPah-Z25w",
         "outputId": "89d3d803-4724-4faf-bd01-1b85da6d295d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2137,7 +2137,7 @@
         "id": "g7kmTEKA9K8O",
         "outputId": "7d48c39d-9fd7-4b4e-f8e4-8396fc0d25c5"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2167,7 +2167,7 @@
         "id": "cFo9QGHppJ29",
         "outputId": "7e4b332a-5c95-4a14-ab32-47eaf58a6ba6"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2193,7 +2193,7 @@
       "metadata": {
         "id": "-e51F73y9K5S"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2210,7 +2210,7 @@
         "id": "iyIp0Rn5NyBH",
         "outputId": "ff0864ce-fe75-4af4-b8a9-11ef8aeeb3c1"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2241,7 +2241,7 @@
         "id": "KB02TE32P-Xa",
         "outputId": "cd58d891-6272-4e1d-f585-1a7a9b069352"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2266,7 +2266,7 @@
         "id": "cC6HtPRWP-Tr",
         "outputId": "05888330-4c08-422d-c10f-b213bebaddaf"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2304,7 +2304,7 @@
         "id": "LaPfwpUAP-RI",
         "outputId": "c7325154-334e-4161-c6b6-ac2c3f4d5d9d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2333,7 +2333,7 @@
         "id": "v2rTtf1BP-PX",
         "outputId": "5105ec95-3390-46e4-da21-96048a5dbbc9"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2346,6 +2346,36 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "telecom_data['Customer service calls'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6GAlNUwe7bmJ",
+        "outputId": "5e4844e6-4ab5-413f-93cb-aa1bdfdfa7cf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1    1448\n",
+              "2     759\n",
+              "0     697\n",
+              "3     429\n",
+              "Name: Customer service calls, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
         }
       ]
     },
@@ -2371,7 +2401,7 @@
         "id": "KzgAnvQGP-Nq",
         "outputId": "bf9bc2b7-f2c7-4fcf-8fc5-298b0c2884f0"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2405,7 +2435,7 @@
         },
         "outputId": "77042cda-6a4d-4293-8e0d-b8f9add68341"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2448,7 +2478,7 @@
         "id": "MxWMGvOl0AqG",
         "outputId": "a3acbdc7-1948-4d09-857d-d6572d081756"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2491,7 +2521,7 @@
         "id": "MsOIsrcN1wdy",
         "outputId": "60d406a9-3a5c-48cc-d6a3-021defec4a38"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2539,7 +2569,7 @@
       "metadata": {
         "id": "ZMao_iKi-zqg"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2555,7 +2585,7 @@
         "id": "KJOEawSn4Elm",
         "outputId": "335edab5-dbe6-4325-d3ac-4a53214abebe"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2584,7 +2614,7 @@
         "id": "FQuF1oul4Ehs",
         "outputId": "d465d487-c1b6-480e-bd45-9c3aadacb3dd"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2613,7 +2643,7 @@
         "id": "1GricG364EgR",
         "outputId": "cc07fcd2-3e9d-4bea-9ca6-95fe3c4c939e"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2642,7 +2672,7 @@
         },
         "outputId": "a2b8c032-de83-4a15-8739-e8488115b19d"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2673,7 +2703,7 @@
       "metadata": {
         "id": "ODs1lOMVwFi1"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2689,7 +2719,7 @@
         "id": "MGH5DLQQJlsV",
         "outputId": "a2417faa-3272-4650-9693-a972518e0b4f"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2718,7 +2748,7 @@
         "id": "oK2o5lEGJlpI",
         "outputId": "ca296bbf-ba88-46b5-ead0-e6b8654d4c62"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2747,7 +2777,7 @@
         "id": "_V6pHScMJlmc",
         "outputId": "1cb4a3b6-e4c3-442c-d139-c9a9d26ad004"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2776,7 +2806,7 @@
         "id": "UA7Upip4JlkS",
         "outputId": "2861b61c-db6c-4c2e-fcee-465354d30581"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2805,7 +2835,7 @@
         "id": "rUuqXZP4JliT",
         "outputId": "49b18806-3c72-46d0-e894-cb2fa3c685cd"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2834,7 +2864,7 @@
         "id": "cPXpWdwWNbFu",
         "outputId": "e60347c2-66cb-4994-931a-955437e1122f"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2860,7 +2890,7 @@
       "metadata": {
         "id": "YBtgeDqM4Cvw"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2876,7 +2906,7 @@
         "id": "bc02ARH25QjU",
         "outputId": "619ba6b0-3b41-4100-f6f9-671f38a0516f"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2905,7 +2935,7 @@
         "id": "EsSuY8kn5hYw",
         "outputId": "313e9674-de1c-4a91-a54a-1f032776eee2"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2946,7 +2976,7 @@
         "id": "2BlZ_TRG6zn1",
         "outputId": "11d0ed0e-e3f5-4cdd-efb5-616e45567ea2"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2971,7 +3001,7 @@
         "id": "jiK6CiEU-TCu",
         "outputId": "8e8b3f31-081c-4413-bada-1adcefc9a95b"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2985,7 +3015,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Showing how the total day charge column\n",
+        "#Showing the total day charge column\n",
         "telecom_data['Total day charge'].sort_values().reset_index().drop('index',axis=1).plot()\n"
       ],
       "metadata": {
@@ -2996,7 +3026,7 @@
         "id": "-A0uP7r1NbCt",
         "outputId": "042ee65f-4703-45a4-a064-c0605a06476d"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
